# adb-daemon-rs

./: .gitignore  Cargo.toml  flake.nix  justfile  rustfmt.toml
src/: config.rs  daemon.rs  forward.rs  log.rs  main.rs  smart_socket.rs  util.rs
src/connection/: manager.rs  mod.rs  types.rs  usb.rs
src/smart_socket/: devices.rs  mod.rs  services.rs
src/sys/: unix.rs  windows.rs
